--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
 </div>
 
 <section class="content">
+    <div class="leftblock">
+        <ul style="list-style: none; font-size: 18pt; margin-bottom: 60px;">
+            <li><a href="#">Парфуми</a></li>
+            <li>
+                <a href="#">Макіяж</a>
+                <ul style="font-size: 14pt; list-style: disc">
+                    <li><a href="#">Шкіра</a></li>
+                    <li><a href="#">Губи</a></li>
+                    <li><a href="#">Очі</a></li>
+                    <li><a href="#">Брови</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Догляд за обличчям</a></li>
+            <li><a href="#">Гігієна</a></li>
+        </ul>
+        <a href="#">
+            <img alt="prices" width="100" height="100" src="img/shopping.png">
+            <h4>Прайс-лист</h4>
+        </a>
+    </div>
 
     <div class="centerblock">
         <div class="products">
